...
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/purple_dark"
            app:boxStrokeWidth="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subjudul5">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_regis_fullname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:paddingVertical="8dp"
                android:textColor="@color/white"
                android:textSize="16sp"
...
                android:fontFamily="@font/bold_font"
                android:textColorHint="@color/white"
                android:focusableInTouchMode="true"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <EditText
            android:id="@+id/message_field"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_drawable_faq"
...
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subjudul6" />
        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/purple_light_80"
            android:text="Submit"
            android:textSize="12sp"
...
