<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/purple_dark"
    android:padding="20dp">

    <EditText
        android:id="@+id/edit_fullname"
        android:layout_width="match_parent"
        android:fontFamily="@font/bold_font"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="Full Name" />

    <EditText
        android:id="@+id/edit_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold_font"
        android:hint="Age"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="number" />

    <Spinner
        android:id="@+id/spinner_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_spinner"
        android:padding="12dp"
        android:popupBackground="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        />



</LinearLayout>
