...
            android:padding="10dp"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:backgroundTint="@color/purple_dark"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_marginStart="20dp"/>

    </LinearLayout>
...
